# cambrian

./: Cargo.toml  README.md
misc/: spec_prototype.yaml
scripts/: mock_obj_func_invalid_output.sh  mock_obj_func_sleep_250.sh
src/: algorithm.rs  async_launch.rs  common_util.rs  controller.rs  crossover.rs  detailed_report.rs  error.rs  event.rs  launcher.rs  lib.rs  message.rs  meta.rs  meta_adapt.rs  mutation.rs  path.rs  process.rs  rescaling.rs  result.rs  selection.rs  spawn.rs  spec.rs  spec_util.rs  sync_launch.rs  termination.rs  testutil.rs  value.rs  value_util.rs  worker.rs
tests/: anon_map.rs  checksum.rs  process_obj_func.rs  terminate_after.rs  termination_criteria.rs  trivial_problem_sync.rs
