[package]
name = "async_aga"
version = "0.1.0"
edition = "2021"
authors = ["Sandro Sgier"]
license = "MIT"
description = """
Asynchronous Adaptive Genetic Algorithm
"""

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
rand = "0.8.5"
rand_distr = "0.4.3"
futures = "0.3.24"
thiserror = "1.0.35"
float-cmp = "0.9.0"
finite = "0.0.1"
derivative = "2.2.0"
async-trait = "0.1.57"
itertools = "0.10.5"
lazy_static = "1.4.0"
