[package]
name = "cambrian"
version = "0.3.0"
edition = "2021"
authors = ["Sandro Sgier"]
repository = "https://github.com/ssgier/cambrian"
readme = "README.md"
keywords = ["optimization", "optimizer", "genetic-algorithm"]
categories = ["command-line-utilities"]
documentation = "https://github.com/ssgier/cambrian/wiki"
license = "MIT"
description = """
A Pragmatic Global Black-Box Optimizer
"""

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
rand = "0.8.5"
rand_distr = "0.4.3"
futures = { version = "0.3.24", features = ["executor", "thread-pool"] }
thiserror = "1.0.35"
float-cmp = "0.9.0"
tangram_finite = "0.7.0"
derivative = "2.2.0"
async-trait = "0.1.57"
itertools = "0.10.5"
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.1"
async-process = "1.5.0"
futures-timer = "3.0.2"
clap = { version = "4.0.17", features = ["derive"] }
anyhow = "1.0.66"
parse_duration = "2.1.1"
ctrlc = "3.2.3"
command-group = { version = "1.0.8", features = ["with-tokio"] }
nix = "0.25.0"
enum-display-derive = "0.1.1"
rustc-hash = "1.1.0"
async-broadcast = "0.5.0"
